# barbero-coqui-ai-tts

./: .gitignore  README.md  setup.cfg
barbero_coqui_ai_tts/: convert_to_flac.py  create_data.py  data_preparation.ipynb  download_transcripts.py  speech_to_text.py  split_files.py  split_on_silence.ipynb  split_sentences.py  stt.py  train-glowtts.py  train.py  upload_flac_to_gcs.py  wada_snr.py
data/: audio_metadata.csv  extracted.csv  extracted2.csv  generic_config.json  merged.xlsx  original_files.csv  pipeline_metadata.csv
data/vocabulary/: vocabulary.txt
