[metadata]
name = barbero_coqui_ai_tts
version_config = True
author = Enucatl
url = https://github.com/enucatl/barbero-coqui-ai-tts
description = TTS for Alessandro Barbero
long_description = file: README.md
long_description_content_type = text/markdown
licence = GPL3

[options]
packages = find:
install_requires = 
    click
    pandas
    tqdm
    pydub
    google-cloud-storage
    google-cloud-speech
    trainer
setup_requires =
    setuptools-git-versioning

[options.extras_require]
development = 
    pytest

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
